force-app/main/default/objects/OpportunityLineItem/fields/Product_Seller__c.field-meta.xml
<CustomField>
    <fullName>Product_Seller__c</fullName>
    <formula>PricebookEntry.Product2.Owner_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Seller</label>
    <type>Text</type>
</CustomField>