force-app/main/default/objects/OpportunityLineItem/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <description>Axora Revenue based on the Product Transaction Fee</description>
    <formula>TotalPrice *  Transaction_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Axora Revenue based on the Product Transaction Fee</inlineHelpText>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>