force-app/main/default/objects/OpportunityLineItem/fields/Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Fee__c</fullName>
    <description>Opportunity specific product transaction fee</description>
    <inlineHelpText>Opportunity specific product transaction fee</inlineHelpText>
    <label>Transaction Fee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>